--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Publish to GitHub Packages Apache Maven
         run: mvn deploy -s ${{ github.workspace }}/.github/settings.xml
         env:
-          GITHUB_TOKEN: ${{ secrets.UV-token }}
+          GITHUB_TOKEN: ${{ secrets.mavendeployment }}
